// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Updated Components/Fields/TextArea Disabled TextArea 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 50%;
  cursor: not-allowed;
  height: auto;
  min-width: 8.75rem;
  background-color: #ffffff;
  width: auto;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem transparent;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 1rem 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 15rem;
  min-width: 15rem;
  resize: none;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -4px) scale(0.8);
  -moz-transform: translate(0.1875rem, -4px) scale(0.8);
  -ms-transform: translate(0.1875rem, -4px) scale(0.8);
  transform: translate(0.1875rem, -4px) scale(0.8);
  font-weight: 700;
}

.emotion-6:focus-within+label {
  color: #1552DD;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-6+label {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  opacity: 50%;
  color: #686BB3;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <textarea
                aria-multiline={true}
                className="emotion-6"
                cols={10}
                disabled={true}
                placeholder="TextArea"
                required={false}
                role="textbox"
                rows={5}
              />
              <label
                className="emotion-7"
              >
                TextArea
                 
              </label>
            </div>
          </div>
        </div>
        <div
          className="emotion-8"
          data-testid="error"
        >
          <span>
            This field is disabled
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Fields/TextArea Overview 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  margin: -16px;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #1B214F;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <p
        className="emotion-3"
        id="a-universal-textarea-component-used-for-the-case-where-large-string-of-text-is-needed-as-an-input."
      >
        A universal TextArea component used for the case where large string of text is needed as an input.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Fields/TextArea Playground 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: auto;
  min-width: 8.75rem;
  background-color: #ffffff;
  width: auto;
}

.emotion-3:hover {
  background-color: #F5F5FF;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 1rem 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 15rem;
  min-width: 15rem;
  resize: both;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: #686BB3;
}

.emotion-6:focus::-moz-placeholder {
  color: #686BB3;
}

.emotion-6:focus:-ms-input-placeholder {
  color: #686BB3;
}

.emotion-6:focus::placeholder {
  color: #686BB3;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -4px) scale(0.8);
  -moz-transform: translate(0.1875rem, -4px) scale(0.8);
  -ms-transform: translate(0.1875rem, -4px) scale(0.8);
  transform: translate(0.1875rem, -4px) scale(0.8);
  font-weight: 700;
}

.emotion-6:focus-within+label {
  color: #1552DD;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-6+label {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  opacity: 1;
  color: #686BB3;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <textarea
                aria-multiline={true}
                className="emotion-6"
                cols={10}
                disabled={false}
                onChange={[Function]}
                placeholder="Placeholder "
                required={false}
                role="textbox"
                rows={5}
                value=""
              />
              <label
                className="emotion-7"
              >
                TextArea
                 
              </label>
            </div>
          </div>
        </div>
        <div
          className="emotion-8"
          data-testid="error"
        >
          <span>
            Hint in Text Area
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Fields/TextArea TextArea Statuses 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: auto;
  min-width: 8.75rem;
  background-color: #ffffff;
  width: auto;
}

.emotion-4:hover {
  background-color: #F5F5FF;
}

.emotion-4:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 1rem 0.75rem;
}

.emotion-5>div {
  position: relative;
}

.emotion-6 {
  width: 100%;
}

.emotion-7 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 15rem;
  min-width: 15rem;
  resize: none;
}

.emotion-7::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7::-moz-placeholder {
  color: transparent;
}

.emotion-7:-ms-input-placeholder {
  color: transparent;
}

.emotion-7::placeholder {
  color: transparent;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7:focus::-moz-placeholder {
  color: transparent;
}

.emotion-7:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-7:focus::placeholder {
  color: transparent;
}

.emotion-7:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-7:focus-within+label,
.emotion-7:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -4px) scale(0.8);
  -moz-transform: translate(0.1875rem, -4px) scale(0.8);
  -ms-transform: translate(0.1875rem, -4px) scale(0.8);
  transform: translate(0.1875rem, -4px) scale(0.8);
  font-weight: 700;
}

.emotion-7:focus-within+label {
  color: #1552DD;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-7+label {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-8 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  opacity: 1;
  color: #686BB3;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-9 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.125rem #F882AC;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: auto;
  min-width: 8.75rem;
  background-color: #FFE7F0;
  width: auto;
}

.emotion-10:hover {
  background-color: #FFB8D1;
}

.emotion-10:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-14 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #FF176B;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  opacity: 1;
  color: #CB205D;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-15 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

.emotion-16 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-17 {
  fill: #CB205D;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-17 path {
  fill: #CB205D;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: auto;
  min-width: 8.75rem;
  background-color: #F5F5FF;
  width: auto;
}

.emotion-18:hover {
  background-color: #F5F5FF;
}

.emotion-18:focus-within {
  box-shadow: 0 0 0 0.125rem #b9cdfc;
  background-color: #F5F5FF;
}

.emotion-21 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 15rem;
  min-width: 15rem;
  resize: none;
}

.emotion-21::-webkit-input-placeholder {
  color: transparent;
}

.emotion-21::-moz-placeholder {
  color: transparent;
}

.emotion-21:-ms-input-placeholder {
  color: transparent;
}

.emotion-21::placeholder {
  color: transparent;
}

.emotion-21:focus {
  outline: none;
}

.emotion-21:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-21:focus::-moz-placeholder {
  color: transparent;
}

.emotion-21:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-21:focus::placeholder {
  color: transparent;
}

.emotion-21:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-21:focus-within+label,
.emotion-21:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -4px) scale(0.8);
  -moz-transform: translate(0.1875rem, -4px) scale(0.8);
  -ms-transform: translate(0.1875rem, -4px) scale(0.8);
  transform: translate(0.1875rem, -4px) scale(0.8);
  font-weight: 700;
}

.emotion-21:focus-within+label {
  color: #1552DD;
}

.emotion-21:disabled {
  cursor: text;
}

.emotion-21+label {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <textarea
                    aria-multiline={true}
                    className="emotion-7"
                    cols={10}
                    disabled={false}
                    placeholder="Normal"
                    required={false}
                    role="textbox"
                    rows={5}
                  />
                  <label
                    className="emotion-8"
                  >
                    Normal
                     
                  </label>
                </div>
              </div>
            </div>
            <div
              className="emotion-9"
              data-testid="error"
            >
              <span>
                Hint in Text Area
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-10"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <textarea
                    aria-multiline={true}
                    className="emotion-7"
                    cols={10}
                    disabled={false}
                    placeholder="Error"
                    required={false}
                    role="textbox"
                    rows={5}
                  />
                  <label
                    className="emotion-14"
                  >
                    Error
                     
                  </label>
                </div>
              </div>
            </div>
            <div
              className="emotion-15"
              data-testid="error"
            >
              <span
                className="emotion-16"
                onClick={[Function]}
              >
                <span
                  className="emotion-17"
                />
              </span>
              <span>
                Error in Text Area
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-18"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <textarea
                    aria-multiline={true}
                    className="emotion-21"
                    cols={10}
                    disabled={true}
                    placeholder="Read-only"
                    readOnly={true}
                    required={false}
                    role="textbox"
                    rows={5}
                  />
                  <label
                    className="emotion-8"
                  >
                    Read-only
                     
                  </label>
                </div>
              </div>
            </div>
            <div
              className="emotion-9"
              data-testid="error"
            >
              <span>
                Hint in Text Area
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Fields/TextArea TextArea with Counter 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: auto;
  min-width: 8.75rem;
  background-color: #ffffff;
  width: auto;
}

.emotion-3:hover {
  background-color: #F5F5FF;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 1rem 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 15rem;
  min-width: 15rem;
  resize: none;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -4px) scale(0.8);
  -moz-transform: translate(0.1875rem, -4px) scale(0.8);
  -ms-transform: translate(0.1875rem, -4px) scale(0.8);
  transform: translate(0.1875rem, -4px) scale(0.8);
  font-weight: 700;
}

.emotion-6:focus-within+label {
  color: #1552DD;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-6+label {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding: 0.5rem 0 0;
  color: #686BB3;
  opacity: 1;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <textarea
                aria-multiline={true}
                className="emotion-6"
                cols={10}
                disabled={false}
                maxLength={10}
                onChange={[Function]}
                placeholder="TextArea"
                required={false}
                role="textbox"
                rows={5}
                value=""
              />
              <label
                className="emotion-7"
              >
                TextArea
                 
              </label>
            </div>
          </div>
        </div>
        <div
          className="emotion-8"
        >
          0
          /
          10
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Fields/TextArea TextArea with Placeholder 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: auto;
  min-width: 8.75rem;
  background-color: #ffffff;
  width: auto;
}

.emotion-3:hover {
  background-color: #F5F5FF;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 1rem 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 15rem;
  min-width: 15rem;
  resize: none;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -4px) scale(0.8);
  -moz-transform: translate(0.1875rem, -4px) scale(0.8);
  -ms-transform: translate(0.1875rem, -4px) scale(0.8);
  transform: translate(0.1875rem, -4px) scale(0.8);
  font-weight: 700;
}

.emotion-6:focus-within+label {
  color: #1552DD;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-6+label {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-11 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 15rem;
  min-width: 15rem;
  resize: none;
}

.emotion-11::-webkit-input-placeholder {
  color: transparent;
}

.emotion-11::-moz-placeholder {
  color: transparent;
}

.emotion-11:-ms-input-placeholder {
  color: transparent;
}

.emotion-11::placeholder {
  color: transparent;
}

.emotion-11:focus {
  outline: none;
}

.emotion-11:focus::-webkit-input-placeholder {
  color: #686BB3;
}

.emotion-11:focus::-moz-placeholder {
  color: #686BB3;
}

.emotion-11:focus:-ms-input-placeholder {
  color: #686BB3;
}

.emotion-11:focus::placeholder {
  color: #686BB3;
}

.emotion-11:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-11:focus-within+label,
.emotion-11:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -4px) scale(0.8);
  -moz-transform: translate(0.1875rem, -4px) scale(0.8);
  -ms-transform: translate(0.1875rem, -4px) scale(0.8);
  transform: translate(0.1875rem, -4px) scale(0.8);
  font-weight: 700;
}

.emotion-11:focus-within+label {
  color: #1552DD;
}

.emotion-11:disabled {
  cursor: not-allowed;
}

.emotion-11+label {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <textarea
                aria-multiline={true}
                className="emotion-6"
                cols={10}
                disabled={false}
                placeholder="TextArea"
                required={false}
                role="textbox"
                rows={5}
              />
              <label
                className="emotion-7"
              >
                TextArea
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <textarea
                aria-multiline={true}
                className="emotion-11"
                cols={10}
                disabled={false}
                placeholder="Placeholder "
                required={false}
                role="textbox"
                rows={5}
              />
              <label
                className="emotion-7"
              >
                TextArea
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Fields/TextArea TextArea with Resizing Option 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: auto;
  min-width: 8.75rem;
  background-color: #ffffff;
  width: auto;
}

.emotion-3:hover {
  background-color: #F5F5FF;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 1rem 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 15rem;
  min-width: 15rem;
  resize: both;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -4px) scale(0.8);
  -moz-transform: translate(0.1875rem, -4px) scale(0.8);
  -ms-transform: translate(0.1875rem, -4px) scale(0.8);
  transform: translate(0.1875rem, -4px) scale(0.8);
  font-weight: 700;
}

.emotion-6:focus-within+label {
  color: #1552DD;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-6+label {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <textarea
                aria-multiline={true}
                className="emotion-6"
                cols={10}
                disabled={false}
                placeholder="TextArea"
                required={false}
                role="textbox"
                rows={5}
              />
              <label
                className="emotion-7"
              >
                TextArea
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
